# wedplan

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCH.md  Dockerfile  README.md  index.html  package.json  pyproject.toml  test_guests.csv  vite.config.ts  wedding_guests.csv
.github/workflows/: ci.yml  deploy.yml
backend/wedplan/: __init__.py  main.py
backend/wedplan/api/: __init__.py  main.py  routes.py
backend/wedplan/api/v1/: health.py  optimize.py
backend/wedplan/core/: config.py  logging.py
backend/wedplan/domain/: errors.py  models.py
backend/wedplan/solver/: __init__.py  constraints.py  cp_sat.py  extract.py  mapping.py  objective.py
scratch/: experiment_adjacent_groups.py  experiment_negative_affinity.py
src/: App.vue  style.css
src/api/: optimize.ts
src/components/: DraggableTable.vue  GroupMatcher.vue  GuestList.vue  PlannerCanvas.vue  PlannerToolbar.vue  SeatCountEditor.vue  ToastNotification.vue  WeddingPlanner.vue
src/components/onboarding/: CSVHelperModal.vue  OnboardingOverlay.vue  OnboardingTooltip.vue
src/composables/: useOnboarding.ts  useTablePlanner.ts  useToast.ts
src/stores/: tablePlanner.spec.ts  tablePlanner.ts
src/styles/: medieval-theme.css  onboarding.css  variables.css
src/types/: index.ts
src/utils/: guestHelpers.ts
src/wedplan/: __init__.py
tests/: __init__.py  test_adjacent_groups.py  test_affinity.py  test_health.py  test_partner_adjacency.py  test_solver_small.py  test_validation.py
